# car

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README  README.md  app.py  export_geocoded_voters.py  geocode_doors.py  import_voters.py  model.py  pyproject.toml  turf_defs.yml.example  turfs.geojson.example  update_voter_turfs.py
.github/workflows/: lint.yml  release.yml  typecheck.yml
car/: app.py  householding.py  model.py  utils.py
car/script/: create_all_voters_phonebank_turf.py  create_turfs_from_defs.py  export_geocoded_voters.py  export_turfs_for_sheets.py  geocode_doors.py  import_l2_voters.py  import_voters.py  targeting_universe.py  update_voter_turfs.py
car/static/: mycoolstylesheet.css  quicknotes.json
car/templates/: activity_feed.html  base.html  credits.html  door.html  edit_voter.html  index.html  login.html  phone_pair.html  phone_paired.html  phone_voter.html  settings.html  take_note.html  turf.html  voter.html
static/: mycoolstylesheet.css
templates/: base.html  door.html  index.html  login.html  phonebank_turf.html  take_note.html  turf.html  voter.html
