[project]
name = "car"
version = "0.0.0"
requires-python = ">=3.12"
description = "car (canvassing action resource). bep bep (be engaged politically)"
dependencies = ["flask>=3.1.2", "pydantic>=2.12.5"]

[tool.black]
line-length = 88
target-version = ['py310']


[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
# ignore line length in the linter since the formatter already does enough
ignore = ["E501"]
