[project]
name = "car"
version = "0.0.0"
requires-python = ">=3.12"
description = "car (canvassing action resource). bep bep (be engaged politically)"
dependencies = ["flask>=3.1.2", "pydantic>=2.12.5"]

[dependency-groups]
dev = ["black>=26.1.0", "pyright>=1.1.408", "typing-extensions>=4.15.0"]

[tool.setuptools]
packages = ["car"]

[tool.black]
line-length = 88
target-version = ['py310']


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line length - the formatter already does enough
    "B019",  # functools.cache in scripts
]
